--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.1",
+    "react-vertical-timeline-component": "^3.5.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
